добавление простой разметки Html

--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-h1 { font-style: normal;}
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+    <header>
+    </header>
+    <footer>
+    </footer>
+</body>
+</html>
